--- a/src/domains.html
+++ b/src/domains.html
@@ -59,21 +59,35 @@
         <div
           class="hidden md:flex md:flex-row flex-col items-center justify-start md:space-x-1 navigation-menu pb-3 md:pb-0 navigation-menu"
         >
-          <a href="#" class="py-2 px-3 block hover:text-primary rounded"
-            >Domains</a
-          >
+          <!-- Dropdown Menu for Domains -->
+          <div class="relative group">
+            <button
+              class="py-2 px-3 hover:text-primary flex items-center gap-2 rounded"
+            >
+              <span class="pointer-events-none">Domains</span>
+            </button>
+            <div
+              class="absolute hidden bg-primary group-hover:block text-white text-center rounded w-32 rounded-br-lg px-3 divide-y"
+            >
+              <a href="#" class="block px-6 py-2">Buy</a> 
+              <a href="#" class="block px-6 py-2">Transfer</a>
+              <a href="#" class="block px-6 py-2">Renew</a>
+              <a href="#" class="block px-6 py-2">Whols</a>
+              <a href="#" class="block px-6 py-2">Backorder</a>
+            </div>
+          </div>
           <a href="#" class="py-2 px-3 block hover:text-primary rounded"
             >Hosting</a
           >
-          <!-- Dropdown Menu -->
-          <div class="relative dropdown">
+          <!-- Dropdown Menu for Servers -->
+          <div class="relative group">
             <button
-              class="dropdown-toggle py-2 px-3 hover:text-primary flex items-center gap-2 rounded"
+              class="py-2 px-3 hover:text-primary flex items-center gap-2 rounded"
             >
               <span class="pointer-events-none">Servers</span>
             </button>
             <div
-              class="dropdown-menu absolute hidden bg-primary divide-y text-white text-center rounded w-32 rounded-br-lg"
+              class="absolute hidden bg-primary group-hover:block divide-y text-white text-center rounded w-32 rounded-br-lg"
             >
               <a href="#" class="block px-6 py-2">Buy</a>
               <a href="#" class="block px-6 py-2">Transfer</a>
@@ -82,6 +96,7 @@
               <a href="#" class="block px-6 py-2">Backorder</a>
             </div>
           </div>
+
           <a href="#" class="py-2 px-3 block hover:text-primary rounded"
             >Support</a
           >
@@ -116,12 +131,11 @@
                     stroke-linejoin="round"
                     fill="white"
                     d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
-                  />
+                  ></path>
                 </svg>
               </button>
-
               <button
-                class="btn px-8 py-3 flex items-center gap-1.5 rounded-br-3xl border border-sectext-secondary text-secondary transition hover:bg-sectext-secondaryhover:text-blue-600 focus:outline-none focus:ring"
+                class="btn px-8 py-3 flex items-center gap-1.5 rounded-br-3xl border border-sectext-secondary text-secondary transition hover:bg-sectext-secondary hover:text-blue-600 focus:outline-none focus:ring"
                 type="button"
               >
                 <svg
@@ -133,13 +147,7 @@
                   stroke="url(#gradient)"
                 >
                   <defs>
-                    <linearGradient
-                      id="gradient"
-                      x1="0%"
-                      y1="0%"
-                      x2="100%"
-                      y2="100%"
-                    >
+                    <linearGradient id="gradient" x1="0%" y1="0%" x2="100%">
                       <stop offset="0%" stop-color="#1a5a96" />
                       <stop offset="100%" stop-color="#52c29a" />
                     </linearGradient>
@@ -148,7 +156,7 @@
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z"
-                  />
+                  ></path>
                 </svg>
                 <span>Sign In</span>
               </button>
@@ -159,9 +167,9 @@
     </nav>
     <!-- ==========  MAIN CONTENT ========== -->
 
-    <div class="relative h-screen text-center text-white">
+    <div class="relative text-center text-white">
       <div
-        class="bg-transparent h-[60rem] bg-center bg-no-repeat bg-contain"
+        class="bg-transparent md:h-[60rem] h-[15rem] bg-center bg-no-repeat md:bg-contain bg-cover flex items-center flex-col justify-center"
         style="background-image: url('./assets/main_back.png')"
       >
         <div class="mx-auto flex flex-col items-center py-12 sm:py-24">
@@ -315,7 +323,7 @@
     </section>
     <!-- ==========  IMAGE CONTENT ========== -->
     <section class="py-12">
-      <div class="container mx-auto px-4">
+      <div class="container mx-auto px-6">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <!-- Left Side (Image) -->
 
@@ -325,7 +333,7 @@
             </h2>
 
             <div class="mb-8">
-              <ul role="list" class="list-disc space-y-4">
+              <ul role="list" class="list-disc space-y-4 pl-5">
                 <li class="space-x-3 text-secondary">
                   Point explanation documented here for users to see and read
                 </li>
@@ -346,7 +354,7 @@
             <div
               class="bg-blue-500 text-white p-4 h-28 w-full bg-sectext-secondary rounded-md"
               style="
-                background-image: url(https://source.unsplash.com/random);
+                background-image: url('./assets/back_side.png');
                 background-repeat: no-repeat;
                 background-size: cover;
               "
@@ -354,7 +362,7 @@
             <div
               class="bg-blue-500 text-white p-4 h-28 w-full bg-sectext-secondary rounded-md"
               style="
-                background-image: url(https://source.unsplash.com/random);
+                background-image: url('./assets/back_side.png');
                 background-repeat: no-repeat;
                 background-size: cover;
               "
@@ -362,7 +370,7 @@
             <div
               class="bg-blue-500 text-white p-4 h-28 w-full bg-sectext-secondary rounded-md"
               style="
-                background-image: url(https://source.unsplash.com/random);
+                background-image: url('./assets/back_side.png');
                 background-repeat: no-repeat;
                 background-size: cover;
               "
