--- a/src/addpayment.html
+++ b/src/addpayment.html
@@ -24,7 +24,7 @@
         <input
           type="text"
           placeholder="Search"
-          class="w-full pl-10 py-2 px-4 bg-gray-100 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+          class="w-full pl-10 py-2 px-4 bg-white border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
         />
         <i
           class="fa fa-search absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"
@@ -38,89 +38,174 @@
         <i class="fa fa-bell text-gray-700 relative fa-lg"> </i>
       </div>
     </div>
-    <div class="flex flex-col md:flex-row">
+    <div class="flex flex-col md:flex-row p-4 bg-[#fbfdfc]">
       <!-- Sidebar -->
-      <div class="bg-white w-full md:w-1/5 h-screen shadow-lg">
-        <div class="flex items-center justify-center h-20 border-b">
-          <div class="ml-3 text-xl font-semibold">Admin</div>
+      <div
+        id="sidebar"
+        class="sidebar-expanded flex shadow-3xl rounded p-4 relative transition-all duration-300 flex-col bg-white shadow-md rounded-md"
+      >
+        <div class="flex items-center justify-end h-20 border-b">
+          <button onclick="toggleSidebar()" class="focus:outline-none">
+            <div class="flex items-center">
+              <!-- <i class="fas fa-bars"></i> -->
+              <img src="./assets/sidebar.svg" />
+              <img src="./assets/arrow_left.svg" />
+            </div>
+          </button>
         </div>
         <nav class="mt-10">
           <a
-            href="#"
+            href="/src/dashboard.html"
+            id="dashboard-link"
             class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
           >
-            <span class="inline-flex justify-center w-6"
-              ><i class="fa fa-tachometer-alt"></i
-            ></span>
-            <span class="ml-2">Dashboard</span>
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/dashboard.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Dashboard</span>
           </a>
           <a
-            href="#"
+            href="/src/domains.html"
+            id="domains-link"
             class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
           >
-            <span class="inline-flex justify-center w-6"
-              ><i class="fa fa-cloud"></i
-            ></span>
-            <span class="ml-2">Domains</span>
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/domain.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Domains</span>
           </a>
           <a
-            href="#"
+            href="/src/hosting.html"
+            id="hosting-link"
             class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
           >
-            <span class="inline-flex justify-center w-6"
-              ><i class="fa fa-server"></i
-            ></span>
-            <span class="ml-2">Hosting</span>
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/hosting.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Hosting</span>
           </a>
+          <div class="flex flex-col">
+            <button
+              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              onclick="toggleDropdown('manageServers')"
+            >
+              <span class="inline-flex justify-center w-6">
+                <img src="./assets/manage_server.svg" />
+              </span>
+              <span class="ml-2 menu-item-text">Manage Servers</span>
+              <span class="ml-auto">
+                <i id="manageServers-icon" class="fas"></i>
+              </span>
+            </button>
+            <div id="manageServers" class="ml-8 hidden">
+              <a
+                href="/src/dedicated-servers"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >Dedicated Servers</a
+              >
+              <a
+                href="/src/virtual-servers"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >Virtual Servers</a
+              >
+            </div>
+          </div>
+          <div class="flex flex-col">
+            <button
+              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              onclick="toggleDropdown('manageSecurity')"
+            >
+              <span class="inline-flex justify-center w-6">
+                <img src="./assets/manage_security.svg" />
+              </span>
+              <span class="ml-2 menu-item-text">Manage Security</span>
+              <span class="ml-auto">
+                <i id="manageSecurity-icon" class="fas"></i>
+              </span>
+            </button>
+            <div id="manageSecurity" class="ml-8 hidden">
+              <a
+                href="/src/ssl-security"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >SSL Certificate</a
+              >
+              <a
+                href="/src/website-security"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >Website Security</a
+              >
+              <a
+                href="/src/email-security"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >Email Security</a
+              >
+            </div>
+          </div>
           <a
-            href="#"
+            href="/src/email-management"
+            id="email-management-link"
             class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
           >
-            <span class="inline-flex justify-center w-6"
-              ><i class="fa fa-shield-alt"></i
-            ></span>
-            <span class="ml-2">Manage Security</span>
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/email.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Email Management</span>
           </a>
+          <div class="flex flex-col">
+            <button
+              class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+              onclick="toggleDropdown('payments')"
+            >
+              <span class="inline-flex justify-center w-6">
+                <img src="./assets/payment.svg" />
+              </span>
+              <span class="ml-2 menu-item-text">Payments</span>
+              <span class="ml-auto">
+                <i id="payments-icon" class="fas"></i>
+              </span>
+            </button>
+            <div id="payments" class="ml-8 hidden">
+              <a
+                href="/src/transaction.html"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >Transaction History</a
+              >
+              <a
+                href="/src/dash_payment.html"
+                class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
+                >Payment Methods</a
+              >
+            </div>
+          </div>
           <a
-            href="#"
+            href="/src/setting.html"
+            id="settings-link"
             class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
           >
-            <span class="inline-flex justify-center w-6"
-              ><i class="fa fa-envelope"></i
-            ></span>
-            <span class="ml-2">Email Management</span>
-          </a>
-          <a
-            href="#"
-            class="flex items-center p-2 text-gray-600 bg-gray-200 hover:bg-gray-300 hover:text-gray-700"
-          >
-            <span class="inline-flex justify-center w-6"
-              ><i class="fa fa-dollar-sign"></i
-            ></span>
-            <span class="ml-2">Payments</span>
-          </a>
-          <div class="ml-6 mt-2 text-sm text-gray-600">Transaction History</div>
-          <a
-            href="#"
-            class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
-          >
-            <span class="ml-6">Payment Methods</span>
+            <span class="inline-flex justify-center w-6">
+              <img src="./assets/settings.svg" />
+            </span>
+            <span class="ml-2 menu-item-text">Settings</span>
           </a>
         </nav>
         <a
           href="#"
-          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 w-full"
+          class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700 absolute bottom-0 block"
         >
-          <span class="inline-flex justify-center w-6"
-            ><i class="fa fa-sign-out-alt"></i
-          ></span>
-          <span class="ml-2">Log Out</span>
+          <span class="inline-flex justify-center w-6">
+            <img src="./assets/logout.svg" />
+          </span>
+          <span class="ml-2 menu-item-text">Log Out</span>
         </a>
       </div>
 
       <!-- Main Content -->
-      <div class="w-full md:w-4/5 h-screen p-6 bg-gray-50">
-        <div class="bg-white p-6 rounded-lg shadow-lg">
+      <div class="w-full h-screen">
+        <div class="p-6">
+          <div class="flex items-center gap-4">
+            <img src="./assets/payment.svg" />
+            <h2 class="text-xl text-dash">Payments</h2>
+          </div>
           <h2 class="text-2xl font-bold mb-6">Add New Payment Method</h2>
           <form>
             <div class="mb-4">
@@ -195,5 +280,6 @@
         </div>
       </div>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
