--- a/src/setting.html
+++ b/src/setting.html
@@ -55,7 +55,7 @@
       </div>
       <nav class="mt-10">
         <a
-          href="/src/dashboard.html"
+          href="/dashboard.html"
           id="dashboard-link"
           class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
         >
@@ -75,7 +75,7 @@
           <span class="ml-2 menu-item-text">Domains</span>
         </a>
         <a
-          href="/src/hosting.html"
+          href="/hosting.html"
           id="hosting-link"
           class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
         >
@@ -166,19 +166,19 @@
           </button>
           <div id="payments" class="ml-8 hidden">
             <a
-              href="/src/transaction.html"
+              href="/transaction.html"
               class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
               >Transaction History</a
             >
             <a
-              href="/src/dash_payment.html"
+              href="/dash_payment.html"
               class="block p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
               >Payment Methods</a
             >
           </div>
         </div>
         <a
-          href="/src/setting.html"
+          href="/setting.html"
           id="settings-link"
           class="flex items-center p-2 text-gray-600 hover:bg-gray-200 hover:text-gray-700"
         >
